--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://spiritstaffingandconsultinginc.applytojob.com/apply/7rhshRc6Dj/Junior-Engineering-Project-Manager-Special-Projects-9602316-1'>Junior Engineering Project Manager (Special Projects) 9602316 - (1) - Spirit Staffing and Consulting Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=olBrbfwi&__jvst=Employee+Referral&__jvsd=sp15xgwN&__jvsc=Twitter&bid=nVVXoMws'>Curriculum Associates Careers - Project Manager / Scrum Master</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.hrc.pdx.edu/postings/31425'>Portland State Careers | Assistant Program Manager, Center for Entrepreneurship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -48,7 +56,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://lewisham.referrals.selectminds.com/jobs/borough-of-sanctuary-programme-manager-997'>Borough of Sanctuary Programme Manager - Lewisham Jobs Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lewisham.referrals.selectminds.com/jobs/borough-of-sanctuary-programme-manager-997'>Borough of Sanctuary Programme Manager - Lewisham Jobs Careers</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -132,11 +140,11 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.energycentral.com/job/owner-039-s-engineering-project-manager-renewable-energy-portland-oregon-205903'>Owner's Engineering Project Manager - Renewable Energy in Portland, Oregon | EnergyCentralJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.energycentral.com/job/owner-039-s-engineering-project-manager-renewable-energy-portland-oregon-205903'>Owner's Engineering Project Manager - Renewable Energy in Portland, Oregon | EnergyCentralJobs</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/program-manager-machine-learning/1859735?gh_src=c7ad02fb1'>Unity Careers - Program Manager, Machine Learning, AI@Unity @ Bellevue</a></h5> 
+<h5><a href='https://careers.unity.com/position/program-manager-machine-learning/1859735?gh_src=c7ad02fb1'>Unity Careers - Program Manager, Machine Learning, AI@Unity @ Bellevue</a></h5> 
 <p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -272,7 +280,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584960'>Stellenangebot: Project Manager Marketing BI (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584960'>Stellenangebot: Project Manager Marketing BI (m/f/x) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -324,7 +332,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -381,7 +389,7 @@ of the Operations Manager to ensure 24/7 professional parking management.</p>
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/project-managersr-project-manager-assoc-director-peri-and-post-approval-team-interventional-studies-4869'>Project ManagerSr Project Manager/Assoc Director - Peri and Post Approval Team (Interventional Studies) - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/project-managersr-project-manager-assoc-director-peri-and-post-approval-team-interventional-studies-4869'>Project ManagerSr Project Manager/Assoc Director - Peri and Post Approval Team (Interventional Studies) - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge Greece Greece  Italy Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -393,7 +401,7 @@ of the Operations Manager to ensure 24/7 professional parking management.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.talkdesk.com/careers/td/lisbon/engineering/summer-internship-1915407?gh_jid=1915407'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/engineering/summer-internship-1915407?gh_jid=1915407'>Project Manager Professional Services  [Lehi] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -419,7 +427,7 @@ of the Operations Manager to ensure 24/7 professional parking management.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436866-implementation-analyst-project-manager-'>Visa Implementation Analyst (Project Manager) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698436866-implementation-analyst-project-manager-'>Visa Implementation Analyst (Project Manager) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -444,14 +452,6 @@ of the Operations Manager to ensure 24/7 professional parking management.</p>
 <h5><a href='https://boards.greenhouse.io/therealreal/jobs/4499861002'>Job Application for Project Manager, Merchandising Operations- Perth Amboy, NJ at The RealReal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/therealreal/jobs/4499864002'>Job Application for Project Manager, Merchandising Operations- Secaucus, NJ at The RealReal</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oXWS9fwE&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngx4nMwv&jvi=oXWS9fwE,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light">Iselin, New Jersey</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
