--- a/product-manager.html
+++ b/product-manager.html
@@ -40,11 +40,23 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://lemanoosh.com/jobs/junior-product-designer-london-uk/'>Junior Product Designer ? leManoosh</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://wpvip.com/careers/senior-product-designer-enterprise/'>Senior Product Designer, Enterprise - Enterprise WordPress hosting, support, and consulting - WordPress VIP</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/product-manager-for-japanese-market-tad-10049'>Product Manager for Japanese Market : TAD - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light">Tokyo, Japan</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/prodigygame/f27729a7-68dc-4c77-9569-97cc4cb01c1f'>Prodigy Game - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://joinoyster.recruitee.com/o/product-manager-acquisition'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://joinoyster.recruitee.com/o/product-manager-acquisition'>
       Product Manager (Acquisition) - Oyster Financial Inc 
     </a></h5> 
 <p><span class="badge badge-light">Mexico Mexico</span></p>
@@ -54,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
+<h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -74,7 +86,7 @@
 <p><span class="badge badge-light">London London  London  London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blackswan/jobs/4496053002'>Job Application for Product Manager  at Black Swan Data Ltd</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -156,7 +168,7 @@
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
+<h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -200,7 +212,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -208,11 +220,11 @@
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
+<h5><a href='https://prolific.breezy.hr/p/c23a0c793a9501-product-manager'>Product Manager at Prolific</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/1a5c2b9f-de4f-458f-b756-b25dbe684054'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -228,7 +240,7 @@
 <p><span class="badge badge-light">London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
+<h5><a href='http://farmersfridge.applytojob.com/apply/YU3Zt1kBNS/Product-Manager-Business-Operations'>Product Manager, Business Operations - Farmer's Fridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -283,7 +295,7 @@ innovation. In close partnership with sales, product marketing, content creators
 Services product portfolio. You will manage the roadmap and feature set of one 
 or?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/o9aobfwC'>ServiceNow Careers - Principal Product Manager, Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/o9aobfwC'>ServiceNow Careers - Principal Product Manager, Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>18 hours ago ... We're looking for an experienced Principal Product Manager that wants to ... This 
 position reports to: Sr Manager of Product Management, Platform BU.</p>
@@ -296,7 +308,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4498655002'>Job Application for Product Designer Co-op at Copperleaf</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4498655002'>Job Application for Product Designer Co-op at Copperleaf</a></h5> 
 <p><span class="badge badge-light">Vancouver, BC  Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -330,7 +342,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=orYSafwb&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nCJ1nMw0'>ServiceNow Careers - Senior Product Manager, Digital Talent Experiences</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -342,11 +354,11 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Madison, Wisconsin  Madison, Wisconsin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/416668734da5-product-manager'>Product Manager at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ansira/5156b5da-0ce5-425f-b617-288f9863bd52'>Ansira - Product Owner</a></h5> 
+<h5><a href='https://jobs.lever.co/ansira/5156b5da-0ce5-425f-b617-288f9863bd52'>Ansira - Product Owner</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -419,7 +431,7 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Santa Clara, CASan Diego, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TitanDataInc/743999698185480-technical-product-manager-devops'>TitanData Inc. Technical Product Manager - Devops | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -443,20 +455,8 @@ online education programs and Physician customer relationship management?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soroco/jobs/1915133'>Job Application for Senior Product Manager at Soroco</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soroco/jobs/1915133'>Job Application for Senior Product Manager at Soroco</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698407469-product-designer'>Points International Product Designer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698402175-senior-product-manager'>Bosch Group Senior Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Warren, MI</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Austin, Texas United States  Austin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
