--- a/full-stack.html
+++ b/full-stack.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOEw8fwQ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUjUoMwM'>Guidewire Software, Inc. Careers - Software Engineer, Full-Stack ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=oZisbfwE&__jvst=Employee&__jvsd=sFFZ9gwd&__jvsc=Twitter&bid=nT3XoMwy'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOEw8fwQ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUjUoMwM'>Guidewire Software, Inc. Careers - Software Engineer, Full-Stack ? Dublin, Ireland</a></h5> 
+<p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://sygnum.join.com/jobs/471534-full-stack-developer-intern-3-month-internship'>Job @ Sygnum (Z?rich): Full-Stack Developer Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -92,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crateio.recruitee.com/o/fullstack-engineer-1'>
       Fullstack Engineer - Crate.io Inc.
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -116,7 +120,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://otus.recruiterbox.com/jobs/fk03o36/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://otus.recruiterbox.com/jobs/fk03o36/'>
     Full Stack Web Engineer - Client Solutions at Otus
 </a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois Chicago</span></p>
@@ -142,7 +146,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698456626-full-stack-web-developer-personal-assistance-solutions-team'>Bosch Group Full-Stack Web Developer / Personal Assistance Solutions Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698456626-full-stack-web-developer-personal-assistance-solutions-team'>Bosch Group Full-Stack Web Developer / Personal Assistance Solutions Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -228,7 +232,7 @@
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698431520-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698431520-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -256,11 +260,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oasysinternationalcorporation89/jobs/1935507'>Job Application for Senior Full-Stack Developer at Oasys International Corporation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/oasysinternationalcorporation89/jobs/1935507'>Job Application for Senior Full-Stack Developer at Oasys International Corporation</a></h5> 
 <p><span class="badge badge-light">Washington, D.C.</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698400223-developpeur-full-stack-h-f'>onepoint D?veloppeur Full-Stack H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698400223-developpeur-full-stack-h-f'>onepoint D?veloppeur Full-Stack H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -315,7 +319,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -331,7 +335,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">San Francisco  United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://Linx.recruiterbox.com/jobs/fk03i2j'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Linx.recruiterbox.com/jobs/fk03i2j'>
     Desenvolvedor Full Stack SR at Linx
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -353,7 +357,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://visionbox.recruitee.com/o/full-stack-developer-the-netherlands'>
+<h5><a href='https://visionbox.recruitee.com/o/full-stack-developer-the-netherlands'>
       Full Stack Developer - The Netherlands - Vision-Box
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands  Lisbon, Portugal</span></p>
@@ -408,7 +412,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304910-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304910-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -440,7 +444,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/useloom/f300409a-d4cd-4510-b562-4e7afbff65ec'>Loom - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -452,11 +456,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/pond5/dc8e85cb-fe5b-4bf3-9b0a-41175a21da2f'>Pond5 - Full Stack Software Engineer (WordPress)</a></h5> 
-<p><span class="badge badge-light">Dublin</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
